# lambda-authorizer

./: Cargo.toml  README.md
src/: claims.rs  main.rs
src/policies/: admin.json  super_admin.json  user.json
